# PyPlayer

./: .gitignore  LICENCE.txt  README.md  files.json  keys.pypirc  pyproject.toml  setup.py  teste.py
PyPlayer/: __init__.py  __main__.py
PyPlayer.egg-info/: PKG-INFO  SOURCES.txt
PyPlayer/PlayerMixer/: Back.py  CurrenteTime.py  Duration.py  EndSound.py  GetPath.py  List.py  Load.py  Next.py  Pause.py  Play.py  Playing.py  Repeat.py  Restart.py  SetTime.py  Stop.py  Tag.py  UnPause.py  Volume.py  ___Init___.py  __init__.py  __main__.py  db.json  dbJson.py
PyPlayer/PlayerMixer/Tags/: Tags.py
PyPlayer/PlayerMixer/filesTemp/: Temp.py  files.json  test.py
PyPlayer_1.0.0.egg-info/: PKG-INFO  top_level.txt
Py_Player.egg-info/: PKG-INFO  requires.txt
