[build-system]
requires = [
	"setuptools>=61.0",
	"pygame>=2.1.2",
	"mutagen>=1.46.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "PyPlayer-1.0.0"
version = "1.0.0"
authors = [
  { name="Eliseu Augusto Gaspar", email="eliseugaspar4@gmail.com" },
]
description = "Um modúlo para audios MP3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EliseuGaspar/PyPlayer"